# protoview

./: .gitignore  Cargo.toml  README.md
protoview-cli/: Cargo.toml
protoview-cli/src/: args.rs  colored_display.rs  harmonize_input.rs  indented_display.rs  main.rs
protoview-cli/tests/: test_file_read.rs
protoview-gui/: Cargo.toml
protoview-lib/: Cargo.toml
protoview-lib/src/: field.rs  field_type.rs  fixed.rs  lib.rs  proto_message.rs  repeated.rs  tag.rs  varint.rs
protoview-lib/src/proto_parsing/: field.rs  fixed.rs  mod.rs  proto_message.rs  repeated.rs  tag.rs  varint.rs
